# Ptolemy_AI

./: .gitignore  16O_dp_cm.in  16O_dp_ptolemy.in  16O_dp_run  16O_dp_run.in  16O_dp_zr.in  16O_dp_zr2.in  AGENT_FINDINGS.md  CMakeCache.txt  CMakeLists.txt  Cpp_AI  DWBA_THEORY.md  ELASTIC_SCATTERING_EXPLAINED.md  Makefile  NEXT_SESSION.md  PTOLEMY_EXPLAINED.md  PTOLEMY_MATH.md  PTOLEMY_SUBROUTINES.md  README.md  SPLIT_STATUS.md  VALIDATION_16Odp.md  a12_debug  a12_debug.cpp  a12_total_test.cpp  a12_validate  a12_validate.cpp  aterm_test  aterm_test.cpp  aterm_test_bin  betcal_faithful_test  betcal_faithful_test.cpp  betcal_trace2  betcal_trace2.cpp  boundstate_test  boundstate_test.cpp  boundstate_test_bin  bs_o17gs  bs_o17gs.cpp  bsprod_compare  bsprod_compare.cpp  (+172 more)
Raphael_AI/: SESSION_HANDOFF.md  bs_cpp_summary.txt  compare_sm148_aa.py  d16O_elastic.in  d16O_smat_cpp.txt  data_ni60dd_ptolemy.txt  ni60_dd.in  ni60_dd_ryan.in  ni60_dd_ryan_iprint.in  ni60_pp.in  ni60dd_smat_raphael.txt  ni60dd_xsec_ptolemy_cm.txt  ni60dd_xsec_raphael.txt  ni60pp_ptolemy.in  ni60pp_ptolemy_print.in  ni60pp_smat_raphael.txt  ni60pp_xsec_ptolemy.txt  ni60pp_xsec_ptolemy_cm.txt  ni60pp_xsec_raphael.txt  o16_pp.in  o16dp_bs_cpp.txt  o16dp_bs_cpp_fixed.txt  o16dp_bs_ptolemy.txt  o16dp_gs.in  o16dp_gs_cm1deg.in  o16dp_gs_new.in  o16dp_smat_print.in  o16dp_smat_print2.in  o16dp_wavefunc.in  o16dp_wavefunc2.in  o16dp_wavefunc3.in  o16dp_wavefunc4.in  o16dp_wavefunc5.in  o16dp_wavefunc6.in  p17O_elastic.in  p17O_smat_cpp.txt  run_raphael_smat_ni60dd.py  sm148_aa.in  sm148_aa_180.in  (+2 more)
src/: main.cpp  (+1 more)
(+85 files in other folders)
